--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/themes": "^3.1.3",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-error-boundary": "^4.0.13"
   },
   "devDependencies": {
     "typescript": "^5",
